# cli

./: CMakeLists.txt
include/: cli
include/cli/: argument.h  option.h  parse_result.h  parser.h
include/cli/parser/: argument  macro  option  parse_result  parser  utils
parser/: CMakeLists.txt  cli_argument.hpp  cli_macro.hpp  cli_option.hpp  cli_parse_result.hpp  cli_parser.hpp  cli_utils.hpp
parser/include/: cli_parser
parser/include/cli/: argument  macro  option  parse_result  parser  utils
